--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -5,7 +5,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-2019]
         config: [py37, py38, py39, py310]
     runs-on: ${{ matrix.os }}
     steps:
