--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     - setup-win.patch
 
 build:
-  number: 1
+  number: 2
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
@@ -23,10 +23,9 @@ requirements:
     - numpy >=1.7
     - pip
     - python
-    - scipy >=0.13.2
     - pybind11
   run:
-    - numpy >=1.7
+    - {{ pin_compatible('numpy') }}
     - python
     - scipy >=0.13.2
 
