--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        config: [py38, py39, py310]
+        config: [py38, py39, py310, py311]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
