--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        config: [py38, py39, py310]
+        config: [py38, py39, py310, py311]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
