--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,12 +14,14 @@ build:
   script: "{{ PYTHON }} -m pip install . -vv"
   script_env:
     - CMAKE_GENERATOR='Visual Studio 16 2019' # [win]
+    - CMAKE_GENERATOR='Ninja' # [not win]
     - CMAKE_GENERATOR_PLATFORM='x64' # [win]
 
 requirements:
   build:
     - {{ compiler('cxx') }}
     - cmake
+    - ninja # [not win]
   host:
     - numpy
     - pip
